# kil0bit-system-monitor

./: .gitignore  App.xaml  App.xaml.cs  CHANGELOG.md  Cargo.toml  ContextMenuWindow.xaml  ContextMenuWindow.xaml.cs  GUIDE.md  Imports.cs  Kil0bitSystemMonitor.csproj  Kil0bitSystemMonitor.slnx  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.cs  Package.appxmanifest  README.md  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.manifest  build.rs  kil0bit-system-monitor.sln
.github/: FUNDING.yml
.github/workflows/: build.yml  bump-version.yml  pull_request.yml  release.yml
Helpers/: BoolToVisibilityConverter.cs  StringFormatConverter.cs  Win32Helper.cs
Models/: SystemMetrics.cs
Properties/: launchSettings.json
Services/: AmdAdlService.cs  ConfigService.cs  StartupService.cs  TelemetryService.cs
ViewModels/: MainViewModel.cs
src/: config.rs  main.rs  windowing.rs
ui/: main.slint  settings.slint
wix/: License.rtf  main.wxs
