[package]
name = "kil0bit-system-monitor"
version = "1.0.0"
edition = "2021"
default-run = "kil0bit-system-monitor"

[dependencies]
dirs = "6.0.0"
nvml-wrapper = "0.12.0"
raw-window-handle = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.8.0", features = ["raw-window-handle-06"] }
sysinfo = "0.38.2"
systemstat = "0.2.6"
image = "0.25.5"
tokio = "1.49.0"
tray-icon = "0.21.3"
tray-item = "0.10.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_Performance", "Win32_UI_Controls", "Win32_System_LibraryLoader", "Win32_System_Registry"] }
winit = "0.30.12"

[build-dependencies]
slint-build = "1.8.0"
winres = "0.1.12"
image = "0.25.5"
