[package]
name = "kil0bit-system-monitor"
version = "1.1.0"
edition = "2021"
default-run = "kil0bit-system-monitor"

[dependencies]
dirs = "6.0.0"
nvml-wrapper = "0.12.0"
raw-window-handle = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.8.0", features = ["raw-window-handle-06"] }
sysinfo = "0.33.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
tray-icon = "0.21.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_Performance", "Win32_System_Registry", "Win32_Security", "Win32_System_LibraryLoader", "Win32_UI_Controls"] }
winit = "0.30.12"

[build-dependencies]
slint-build = "1.8.0"
winres = "0.1.12"
image = { version = "0.25.5", default-features = false, features = ["png"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
